--- a/ansible.cfg
+++ b/ansible.cfg
@@ -68,7 +68,7 @@ command_warnings = False
 
 # additional paths to search for roles in, colon separated
 #roles_path    = /etc/ansible/roles
-roles_path = /home/ansi001/roles
+roles_path = /home/ansi001/DevOps_b1/roles
 
 # uncomment this to disable SSH key host checking
 #host_key_checking = False
